Initialize maven compiler plugin in multi-module build